# hgai-ecg

./: README.md  feature_extraction.ipynb  pyproject.toml
data/: extracted_features.csv
