[tool.poetry]
name = "hgai-ecg"
version = "0.1.0"
description = ""
authors = ["Hasib Ahmed <hasib@hasib-ahmed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scipy = "^1.14.0"
pywavelets = "^1.6.0"
logging = "^0.4.9.6"
ipykernel = "^6.29.5"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
